# MailMind

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
src/mailmind/: __init__.py
src/mailmind/agents/: __init__.py
src/mailmind/config/: __init__.py  settings.py
src/mailmind/state/: __init__.py  email_state.py
src/mailmind/tools/: __init__.py
src/mailmind/utils/: __init__.py
