[project]
name = "mailmind"
version = "0.1.0"
description = "Intelligent email orchestration system built with LangGraph"
authors = [
    { name = "Abdelrahman Ebid", email = "abdelrahman.ebid.dev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Core LangGraph and LangChain
    "langgraph>=0.6.6,<0.7.0",
    "langchain>=0.2.14",
    "langchain-core>=0.2.14",
    "langchain-community>=0.2.14",
    
    # Google Gemini integration
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.3.0",
    
    # Email providers
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    
    # Data processing and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    
    # Async and HTTP
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.1",
    "click>=8.0.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "markdownify>=0.11.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
